# FutureDataScienceLegends

./: .gitattributes  .gitignore  20. Build a Data Science Project Strory  21. Mock Interview Outcome  Modelfile  README.md  cross_sell_prediction.ipynb  kmeans.ipynb
04. Linear Regression/: LinearAlgebra_onevariable.ipynb
16. PCA/: PCA.ipynb  Readme.md  (+1 more)
43. Bedrock Agentcore/sample-amazon-bedrock-agentcore-prototype-to-production/: .gitignore  README.md  main.py  pyproject.toml
43. Bedrock Agentcore/sample-amazon-bedrock-agentcore-prototype-to-production/01-bedrock-knowledge-base/: 01_create_knowledgebase.ipynb
43. Bedrock Agentcore/sample-amazon-bedrock-agentcore-prototype-to-production/02-Strands-mortgage-assistant/: README.md  mortgage_agent.py
43. Bedrock Agentcore/sample-amazon-bedrock-agentcore-prototype-to-production/03-agentcore-runtime/: README.md  agentcore_runtime.ipynb  mortgage_agent_runtime.py  policy.json  trust-policy.json  utils.py
43. Bedrock Agentcore/sample-amazon-bedrock-agentcore-prototype-to-production/04-agentcore-gateway/: README.md  lambda_function_code.py  mortgage_gateway.ipynb  utils.py
43. Bedrock Agentcore/sample-amazon-bedrock-agentcore-prototype-to-production/05-agentcore-identity/: README.md  requirements.txt
43. Bedrock Agentcore/sample-amazon-bedrock-agentcore-prototype-to-production/06-agentcore-memory/: README.md  agentcore_memory.ipynb  mortgage_agent_runtime_with_memory.py  utils.py
43. Bedrock Agentcore/sample-amazon-bedrock-agentcore-prototype-to-production/07-agentcore-observability/: agentcore-observability.ipynb
(+794 files in other folders)
